feat: Rework UI and add festival greetings
Refactors the application's user interface by replacing the main `App` component with a `Launcher` and `KiboInterface`. This change aims to improve modularity and user experience.

Additionally, introduces a new feature that allows Kibo to offer festival-specific greetings and visual elements based on the current date and regional festivals. This adds a personalized and culturally relevant touch to the AI companion.

The `index.html` has been updated for styling and the `apple-touch-icon` to use a more scalable SVG. The `App.tsx` file has been restructured, and `types.ts` now includes logic for detecting and handling festivals. `KiboAvatar.tsx` is updated to display festival-related content.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Kibo - AI Desktop Friend</title>
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#1e293b">
-    <link rel="apple-touch-icon" href="/icon-192x192.png">
+    <link rel="apple-touch-icon" href="/icon.svg">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -233,7 +233,7 @@
 }
 </script>
 </head>
-  <body class="bg-transparent">
+  <body class="bg-slate-900 text-white overflow-hidden">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
     <script>
